--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,7 @@
 language: python
-python:
-- 2.7
-- 3.6
-os:
-- linux
-- osx
 env:
   global:
-  - PYTHON_VERSION=$TRAVIS_PYTHON_VERSION
+  - PYTHON_VERSION=$PYTHON_VERSION
   - NUMPY_VERSION=stable
   - MAIN_CMD='python setup.py'
   - CONDA_DEPENDENCIES='Cython pandas scipy numpy coveralls coverage h5py mock'
@@ -16,6 +10,18 @@ env:
   - EVENT_TYPE='push pull_request'
   - SETUP_CMD='test'
   - CONDA_CHANNELS='conda-forge'
+matrix:
+  include:
+    - env: PYTHON_VERSION=2.7
+      os: linux
+    - env: PYTHON_VERSION=2.7
+      os: osx
+      language: generic
+    - env: PYTHON_VERSION=3.6
+      os: linux
+    - env: PYTHON_VERSION=3.6
+      os: osx
+      language: generic
 install:
 - git clone --depth 1 git://github.com/astropy/ci-helpers.git
 - source ci-helpers/travis/setup_conda.sh
