--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ env:
   - PYTHON_VERSION=$PYTHON_VERSION
   - NUMPY_VERSION=stable
   - MAIN_CMD='python setup.py'
-  - CONDA_DEPENDENCIES='Cython pandas scipy numpy coveralls coverage h5py mock'
+  - CONDA_DEPENDENCIES='cython pandas scipy numpy coveralls coverage h5py mock'
   - PIP_DEPENDENCIES=''
   - SETUP_XVFB=False
   - EVENT_TYPE='push pull_request'
