--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,8 @@ matrix:
       os: linux
     - env: PYTHON_VERSION=3.6
       os: osx
+    - env: PYTHON_VERSION=3.7
+      os: linux
       language: generic
 install:
 - git clone --depth 1 git://github.com/astropy/ci-helpers.git
