Remove generic language setting for travis and added OSX 3.7 env

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ matrix:
       os: osx
     - env: PYTHON_VERSION=3.7
       os: linux
-      language: generic
+    - env: PYTHON_VERSION=3.7
+      os: osx
 install:
 - git clone --depth 1 git://github.com/astropy/ci-helpers.git
 - source ci-helpers/travis/setup_conda.sh
