Switch to versioneer and loghub

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,5 @@ include docs/Makefile
 recursive-include docs/source *
 include LICENSE.txt
 include geotiepoints/multilinear_cython.pyx
+include versioneer.py
+include geotiepoints/version.py
