--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,10 @@
 [bdist_rpm]
 requires=numpy scipy pyresample
 release=1
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = geotiepoints/version.py
+versionfile_build =
+tag_prefix = v
