Fix installation in CI environments

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,7 +59,7 @@ jobs:
       - name: Install geotiepoints
         shell: bash -l {0}
         run: |
-          pip install --no-deps -e .
+          pip install -e .
 
       - name: Run unit tests
         shell: bash -l {0}
