--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -64,7 +64,7 @@ jobs:
       - name: Run unit tests
         shell: bash -l {0}
         run: |
-          pytest --cov=geotiepoints geotiepoints/test --cov-report=xml --cov-report=
+          pytest --cov=geotiepoints geotiepoints/tests --cov-report=xml --cov-report=
 
       - name: Test website
         shell: bash -l {0}
