--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-include docs/Makefile
-recursive-include docs/source *
+include doc/Makefile
+recursive-include doc/source *
 include LICENSE.txt
 include geotiepoints/multilinear_cython.pyx
 include versioneer.py
