--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,5 @@
 [build-system]
 requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
+
+[tool.coverage.run]
+relative_files = true
