--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -80,7 +80,9 @@ jobs:
           env_vars: OS,PYTHON_VERSION,UNSTABLE
 
       - name: Coveralls Parallel
-        uses: AndreMiras/coveralls-python-action@develop
+        # See https://github.com/AndreMiras/coveralls-python-action/pull/16
+        uses: miurahr/coveralls-python-action@patch-pyprject-toml
+#        uses: AndreMiras/coveralls-python-action@develop
         with:
           flag-name: run-${{ matrix.test_number }}
           parallel: true
@@ -91,7 +93,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Coveralls Finished
-        uses: AndreMiras/coveralls-python-action@develop
+        # See https://github.com/AndreMiras/coveralls-python-action/pull/16
+        uses: miurahr/coveralls-python-action@patch-pyprject-toml
+#        uses: AndreMiras/coveralls-python-action@develop
         with:
           parallel-finished: true
 
