--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,13 +9,14 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: ["windows-latest", "ubuntu-latest", "macos-latest"]
-        python-version: ["3.8", "3.9", "3.10"]
+#        os: ["windows-latest", "ubuntu-latest", "macos-latest"]
+        os: ["macos-latest"]
+        python-version: ["3.10"]
         experimental: [false]
-        include:
-          - python-version: "3.9"
-            os: "ubuntu-latest"
-            experimental: true
+#        include:
+#          - python-version: "3.9"
+#            os: "ubuntu-latest"
+#            experimental: true
 
     env:
       PYTHON_VERSION: ${{ matrix.python-version }}
