Fix wheel builds not including proper version number

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,5 +10,5 @@ ignore = D107
 VCS = git
 style = pep440
 versionfile_source = geotiepoints/version.py
-versionfile_build =
+versionfile_build = geotiepoints/version.py
 tag_prefix = v
