--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,6 +78,14 @@ jobs:
             quay.io/pypa/${{ matrix.docker-image }} \
             /io/continuous_integration/build-manylinux-wheels.sh
 
+      - name: Check version number from inside wheel
+        if:  matrix.docker-image != 'manylinux1_i686'
+        run: |
+          mv geotiepoints unused_src_to_prevent_local_import
+          python -m pip install --find-links=./dist/ geotiepoints
+          python -c "import geotiepoints; print(geotiepoints.__file__, geotiepoints.__version__)"
+          python -c "import geotiepoints; assert 'unknown' not in geotiepoints.__version__, 'incorrect version found'"
+
       - name: Upload wheel(s) as build artifacts
         uses: actions/upload-artifact@v2
         with:
