--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -82,7 +82,7 @@ jobs:
         if:  matrix.docker-image != 'manylinux1_i686'
         run: |
           mv geotiepoints unused_src_to_prevent_local_import
-          python -m pip install --find-links=./dist/ geotiepoints
+          python -m pip install --find-links=./dist/ python-geotiepoints
           python -c "import geotiepoints; print(geotiepoints.__file__, geotiepoints.__version__)"
           python -c "import geotiepoints; assert 'unknown' not in geotiepoints.__version__, 'incorrect version found'"
 
