--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,7 @@
 [build-system]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython"]
+requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython", "versioneer-518"]
+build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
 relative_files = true
+
