Ignore version.py from coverage

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,3 +5,4 @@ build-backend = "setuptools.build_meta"
 [tool.coverage.run]
 relative_files = true
 plugins = ["Cython.Coverage"]
+omit = ["geotiepoints/version.py"]
