--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython", "versioneer-518"]
+requires = ["setuptools", "wheel", "oldest-supported-numpy", "Cython", "versioneer"]
 build-backend = "setuptools.build_meta"
 
 [tool.coverage.run]
