--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,7 @@ jobs:
           miniforge-variant: Mambaforge
           miniforge-version: latest
           use-mamba: true
+          channel-priority: strict
           python-version: ${{ matrix.python-version }}
           activate-environment: test-environment
           environment-file: continuous_integration/environment.yaml
