--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -79,7 +79,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: wheels
-          path: wheelhouse
+          path: dist
       - name: Publish package to Test PyPI
         if: github.event.action != 'published'
         uses: pypa/gh-action-pypi-publish@v1.8.10
