--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -81,7 +81,7 @@ jobs:
           name: wheels
           path: dist
       - name: Publish package to Test PyPI
-        if: github.event.action != 'published'
+        if: github.event.action != 'published' && github.event_name == 'push'
         uses: pypa/gh-action-pypi-publish@v1.8.10
         with:
           user: __token__
