--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,7 +43,7 @@ jobs:
         shell: bash -l {0}
         run: |
           python -m pip install versioneer pkgconfig; \
-          conda uninstall --force-remove -y scipy h5py; \
+          conda uninstall --force-remove -y scipy h5py pykdtree; \
           python -m pip install \
           -f https://pypi.anaconda.org/scientific-python-nightly-wheels/simple/ \
           --trusted-host pypi.anaconda.org \
@@ -57,6 +57,7 @@ jobs:
           git+https://github.com/dask/dask \
           git+https://github.com/dask/distributed \
           git+https://github.com/h5py/h5py \
+          git+https://github.com/storpipfugl/pykdtree \
           git+https://github.com/zarr-developers/zarr \
           git+https://github.com/pydata/bottleneck \
           git+https://github.com/pydata/xarray;
