--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -51,12 +51,6 @@ jobs:
       - run: |
           git fetch --prune --unshallow
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.1.4
         env:
@@ -79,10 +73,10 @@ jobs:
         with:
           name: sdist
           path: dist
-      - name: Download wheels artifact - win
+      - name: Download wheels artifact
         uses: actions/download-artifact@v5
         with:
-          name: wheels-*
+          pattern: wheels-*
           merge-multiple: true
           path: dist
       - name: Publish package to Test PyPI
