--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,6 +1,5 @@
 name: Deploy sdist and wheels
 
-
 on:
   push:
   pull_request:
@@ -28,46 +27,41 @@ jobs:
           path: dist/*.tar.gz
 
   build_wheels:
-    name: "Build wheels on ${{ matrix.os }} ${{ matrix.cibw_archs }}"
+    name: "Build wheels on ${{ matrix.os }} ${{ matrix.arch }}"
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - os: windows-latest
-            cibw_archs: "AMD64 ARM64"
-            artifact_name: "win"
-          - os: macos-latest
-            cibw_archs: "x86_64 arm64"
-            artifact_name: "mac"
-          - os: "ubuntu-latest"
-            cibw_archs: "aarch64"
-            artifact_name: "ubuntu-aarch"
-          - os: "ubuntu-latest"
-            cibw_archs: "x86_64"
-            artifact_name: "ubuntu-x86_64"
+          - os: windows-2022
+            arch: "AMD64"
+          - os: windows-11-arm
+            arch: "ARM64"
+          - os: macos-13
+            arch: "x86_64"
+          - os: macos-14
+            arch: "arm64"
+          - os: "ubuntu-24.04-arm"
+            arch: "aarch64"
+          - os: "ubuntu-24.04"
+            arch: "x86_64"
 
     steps:
       - uses: actions/checkout@v5
       - run: |
           git fetch --prune --unshallow
 
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v3
-        with:
-          platforms: all
-
       - name: Build wheels
         uses: pypa/cibuildwheel@v3.1.4
         env:
-          CIBW_SKIP: "cp38-* *-manylinux_i686 *-musllinux_i686 *-musllinux_aarch64 *-win32"
-          CIBW_ARCHS: "${{ matrix.cibw_archs }}"
+          CIBW_SKIP: "cp39-* cp310-* *-manylinux_i686 *-musllinux_i686 *-musllinux_aarch64 *-win32"
+          CIBW_ARCHS: "${{ matrix.arch }}"
           CIBW_TEST_SKIP: "*_arm64"
+          CIBW_ENABLE: cpython-freethreading
 
       - uses: actions/upload-artifact@v4
         with:
-          name: wheels-${{ matrix.artifact_name }}
+          name: wheels-${{ matrix.os }}-${{ matrix.arch }}
           path: ./wheelhouse/*.whl
 
   upload_to_pypi:
@@ -79,25 +73,11 @@ jobs:
         with:
           name: sdist
           path: dist
-      - name: Download wheels artifact - win
+      - name: Download wheels artifact
         uses: actions/download-artifact@v5
         with:
-          name: wheels-win
-          path: dist
-      - name: Download wheels artifact - mac
-        uses: actions/download-artifact@v5
-        with:
-          name: wheels-mac
-          path: dist
-      - name: Download wheels artifact - ubuntu aarch
-        uses: actions/download-artifact@v5
-        with:
-          name: wheels-ubuntu-aarch
-          path: dist
-      - name: Download wheels artifact - ubuntu x86_64
-        uses: actions/download-artifact@v5
-        with:
-          name: wheels-ubuntu-x86_64
+          pattern: wheels-*
+          merge-multiple: true
           path: dist
       - name: Publish package to Test PyPI
         if: github.event.action != 'published' && github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
