--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,7 +37,7 @@ jobs:
             arch: "AMD64"
           - os: windows-11-arm
             arch: "ARM64"
-          - os: macos-13
+          - os: macos-15-intel
             arch: "x86_64"
           - os: macos-14
             arch: "arm64"
